updated api key and url

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -28,6 +28,6 @@ jobs:
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          curl -X POST "https://api.render.com/deploy/srv-c1234567" \
-          -H "Authorization: Bearer $RENDER_API_KEY" \
+          curl -X POST "https://api.render.com/v1/services/srv-cs5c4mq3esus73ath4l0/deploys" \
+          -H "Authorization: Bearer  ${{ secrets.RENDER_API_KEY }}" \
           -d '{"clearCache": false}'
